--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: GXwasR
 Title: Genome-wide and x-chromosome wide association analyses applying best practices of quality control over genetic data 
-Version: 0.4.0
+Version: 0.02.02
 Authors@R: 
     person(given = "Banabithi",
            family = "Bose",
-           role = c("aut", "cre"),
+           role = c("aut","cre"),
            email = "banabithi.bose@gmail.com",
            comment = c(ORCID = "0000-0003-0842-8768"))
 Description: This package performs various models of genome-wide and x-chromosome wide association analyses applying best practices of quality control over genetic data.
@@ -17,7 +17,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     stats,
-    utils,
     grDevices,
     biomaRt,
     geneAttribution,
@@ -30,11 +29,13 @@ Suggests:
     rmarkdown, 
     tools, 
     qpdf,
-    printr
+    printr,
+    doSNOW,
+    foreach
 Imports:
+     utils,
      ggpubr,
      ggrepel,
-     DescTools,
      BiocStyle,
      GenomeInfoDb,
      GenomicRanges,
@@ -54,4 +55,5 @@ Imports:
      sumFREGAT,
      sys,
      magrittr,
-     poolr
+     poolr,
+     progress
