--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,33 +4,38 @@ export("%>%")
 export(AncestryCheck)
 export(ClumpLD)
 export(ComputeGeneticPC)
+export(ComputeLD)
 export(ComputePRS)
 export(DiffZeroOne)
 export(Download_reference)
+export(DummyCovar)
 export(EstimateHerit)
 export(FilterAllele)
 export(FilterPlinkSample)
 export(FilterRegion)
+export(FilterSNP)
 export(GXWASmiami)
 export(GXwas)
 export(GeneticCorrBT)
 export(GetMFPlink)
+export(LDPrune)
 export(MAFdiffSexControl)
 export(MergeRegion)
 export(MetaGWAS)
 export(PlinkSummary)
+export(PvalComb)
 export(QCsample)
-export(QCsample2)
 export(QCsnp)
 export(SexCheck)
 export(SexDiff)
-export(SexDiffZcrore)
+export(SexDiffZscore)
 export(SexRegress)
+export(SumstatGenCorr)
 export(TestXGene)
 export(Xhwe)
+export(executePlinkMAF)
 export(plinkVCF)
 importFrom(BiocStyle,html_document)
-importFrom(DescTools,"%like%")
 importFrom(GenomeInfoDb,getChromInfoFromUCSC)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(Matrix,sparseMatrix)
@@ -47,7 +52,13 @@ importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
+importFrom(dplyr,arrange)
+importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(gdsfmt,index.gdsn)
 importFrom(gdsfmt,read.gdsn)
 importFrom(gdsfmt,showfile.gds)
@@ -104,6 +115,7 @@ importFrom(magrittr,"%>%")
 importFrom(plyranges,join_overlap_intersect)
 importFrom(poolr,bonferroni)
 importFrom(poolr,stouffer)
+importFrom(progress,progress_bar)
 importFrom(qqman,manhattan)
 importFrom(qqman,qq)
 importFrom(regioneR,toGRanges)
@@ -138,5 +150,7 @@ importFrom(sumFREGAT,sumchi)
 importFrom(sys,exec_wait)
 importFrom(utils,download.file)
 importFrom(utils,read.table)
+importFrom(utils,txtProgressBar)
+importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
