Update Package DESCRIPTION, NAMESPACE, and misc.R
DESCRIPTION
- update to latest RoxygenNote
- add rlang to Imports (to assist with no visible bindings errors)
- use list in Authors@R

NAMESPACE
- import `rlang::.data`

misc.R
- update package startup (misc.R) to reference Authors@R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ importFrom(progress,progress_bar)
 importFrom(qqman,manhattan)
 importFrom(qqman,qq)
 importFrom(regioneR,toGRanges)
+importFrom(rlang,.data)
 importFrom(stats,binomial)
 importFrom(stats,cor)
 importFrom(stats,dnorm)
