add dplyr::n() to NAMESPACE/.data$N additions within filter()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(gdsfmt,index.gdsn)
