--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(foreach,"%dopar%")
 importFrom(gdsfmt,index.gdsn)
 importFrom(gdsfmt,read.gdsn)
 importFrom(gdsfmt,showfile.gds)
