--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_density)
