--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_errorbarh)
