--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(BiocStyle,html_document)
 importFrom(GenomeInfoDb,getChromInfoFromUCSC)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(Matrix,sparseMatrix)
+importFrom(Rdpack,reprompt)
 importFrom(SNPRelate,snpgdsBED2GDS)
 importFrom(SNPRelate,snpgdsGetGeno)
 importFrom(SNPRelate,snpgdsOpen)
