--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -57,12 +57,13 @@ jobs:
             wget -q https://s3.amazonaws.com/plink1-assets/plink_mac_20230116.zip -O plink.zip
             unzip -j plink.zip plink -d "$HOME/.local/bin"
           elif [[ "${RUNNER_OS}" == "Windows" ]]; then
-            # Use a fixed path that works in GitHub's Git Bash
-            mkdir -p "/c/Users/runneradmin/.local/bin"
+            export BIN_DIR="$USERPROFILE/.local/bin"
+            mkdir -p "$BIN_DIR"
             curl -LO https://s3.amazonaws.com/plink1-assets/plink_win64_20230116.zip
-            unzip -j plink_win64_20230116.zip plink.exe -d "/c/Users/runneradmin/.local/bin"
-            echo "/c/Users/runneradmin/.local/bin" >> $GITHUB_PATH
-            echo "PLINK_PATH=/c/Users/runneradmin/.local/bin/plink.exe" >> $GITHUB_ENV
+            unzip -j plink_win64_20230116.zip plink.exe -d "$BIN_DIR"
+            chmod +x "$BIN_DIR"/plink.exe || true
+            echo "$BIN_DIR" >> $GITHUB_PATH
+            echo "PLINK_PATH=$BIN_DIR/plink.exe" >> $GITHUB_ENV
           fi
           chmod +x "$HOME/.local/bin"/plink* || true
 
