add GCTA to test environment in GHA

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,7 +45,7 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
       
-       # Install PLINK binary
+      # Install PLINK binary
       - name: Install PLINK
         shell: bash
         run: |
@@ -66,6 +66,28 @@ jobs:
             echo "PLINK_PATH=$BIN_DIR/plink.exe" >> $GITHUB_ENV
           fi
           chmod +x "$HOME/.local/bin"/plink* || true
+      
+      # Install GCTA binary
+      - name: Install GCTA
+        shell: bash
+        run: |
+          mkdir -p "$HOME/.local/bin"
+          if [[ "${RUNNER_OS}" == "Linux" ]]; then
+            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Linux.zip -O gcta.zip
+            unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
+          elif [[ "${RUNNER_OS}" == "macOS" ]]; then
+            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Mac.zip -O gcta.zip
+            unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
+          elif [[ "${RUNNER_OS}" == "Windows" ]]; then
+            export BIN_DIR="$USERPROFILE/.local/bin"
+            mkdir -p "$BIN_DIR"
+            curl -LO https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Windows.zip
+            unzip -j gcta64_v1.94.1beta_Windows.zip gcta64.exe -d "$BIN_DIR"
+            chmod +x "$BIN_DIR"/gcta64.exe || true
+            echo "$BIN_DIR" >> $GITHUB_PATH
+            echo "GCTA_PATH=$BIN_DIR/gcta64.exe" >> $GITHUB_ENV
+          fi
+          chmod +x "$HOME/.local/bin"/gcta64* || true
 
       - uses: r-lib/actions/check-r-package@v2
         with:
