--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -73,15 +73,15 @@ jobs:
         run: |
           mkdir -p "$HOME/.local/bin"
           if [[ "${RUNNER_OS}" == "Linux" ]]; then
-            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Linux.zip -O gcta.zip
+            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.4-linux-kernel-3-x86_64.zip -O gcta.zip
             unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
           elif [[ "${RUNNER_OS}" == "macOS" ]]; then
-            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Mac.zip -O gcta.zip
+            wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-macOS-x86_64.zip -O gcta.zip
             unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
           elif [[ "${RUNNER_OS}" == "Windows" ]]; then
             export BIN_DIR="$USERPROFILE/.local/bin"
             mkdir -p "$BIN_DIR"
-            curl -LO https://yanglab.westlake.edu.cn/software/gcta/bin/gcta64_v1.94.1beta_Windows.zip
+            curl -LO https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-Win-x86_64.zip
             unzip -j gcta64_v1.94.1beta_Windows.zip gcta64.exe -d "$BIN_DIR"
             chmod +x "$BIN_DIR"/gcta64.exe || true
             echo "$BIN_DIR" >> $GITHUB_PATH
