--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -74,20 +74,23 @@ jobs:
           mkdir -p "$HOME/.local/bin"
           if [[ "${RUNNER_OS}" == "Linux" ]]; then
             wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.4-linux-kernel-3-x86_64.zip -O gcta.zip
-            unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
+            unzip -j gcta.zip -d "$HOME/.local/bin"
+            mv "$HOME/.local/bin/"gcta* "$HOME/.local/bin/gcta64"
+            chmod +x "$HOME/.local/bin/gcta64"
           elif [[ "${RUNNER_OS}" == "macOS" ]]; then
             wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-macOS-x86_64.zip -O gcta.zip
-            unzip -j gcta.zip gcta64 -d "$HOME/.local/bin"
+            unzip -j gcta.zip -d "$HOME/.local/bin"
+            mv "$HOME/.local/bin/"gcta-1.* "$HOME/.local/bin/gcta64"
+            chmod +x "$HOME/.local/bin/gcta64"
           elif [[ "${RUNNER_OS}" == "Windows" ]]; then
             export BIN_DIR="$USERPROFILE/.local/bin"
             mkdir -p "$BIN_DIR"
             curl -LO https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-Win-x86_64.zip
-            unzip -j gcta64_v1.94.1beta_Windows.zip gcta64.exe -d "$BIN_DIR"
-            chmod +x "$BIN_DIR"/gcta64.exe || true
+            unzip -j gcta-1.94.1-Win-x86_64.zip "exe/gcta64.exe" -d "$BIN_DIR"
+            chmod +x "$BIN_DIR/gcta64.exe" || true
             echo "$BIN_DIR" >> $GITHUB_PATH
             echo "GCTA_PATH=$BIN_DIR/gcta64.exe" >> $GITHUB_ENV
           fi
-          chmod +x "$HOME/.local/bin"/gcta64* || true
 
       - uses: r-lib/actions/check-r-package@v2
         with:
