--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -75,7 +75,6 @@ jobs:
           if [[ "${RUNNER_OS}" == "Linux" ]]; then
             wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.4-linux-kernel-3-x86_64.zip -O gcta.zip
             unzip -j gcta.zip -d "$HOME/.local/bin"
-            mv "$HOME/.local/bin/"gcta* "$HOME/.local/bin/gcta64"
             chmod +x "$HOME/.local/bin/gcta64"
           elif [[ "${RUNNER_OS}" == "macOS" ]]; then
             wget -q https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-macOS-x86_64.zip -O gcta.zip
@@ -86,7 +85,8 @@ jobs:
             export BIN_DIR="$USERPROFILE/.local/bin"
             mkdir -p "$BIN_DIR"
             curl -LO https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-Win-x86_64.zip
-            unzip -j gcta-1.94.1-Win-x86_64.zip "exe/gcta64.exe" -d "$BIN_DIR"
+            unzip gcta-1.94.1-Win-x86_64.zip -d gcta_extracted
+            cp gcta_extracted/exe/gcta64.exe "$BIN_DIR/gcta64.exe"
             chmod +x "$BIN_DIR/gcta64.exe" || true
             echo "$BIN_DIR" >> $GITHUB_PATH
             echo "GCTA_PATH=$BIN_DIR/gcta64.exe" >> $GITHUB_ENV
