--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ importFrom(GenomeInfoDb,getChromInfoFromUCSC)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(Matrix,sparseMatrix)
 importFrom(Rdpack,reprompt)
+importFrom(Rsamtools,bgzip)
+importFrom(Rsamtools,indexTabix)
 importFrom(SNPRelate,snpgdsBED2GDS)
 importFrom(SNPRelate,snpgdsGetGeno)
 importFrom(SNPRelate,snpgdsOpen)
