updates: - be explicit about pathing (filesystem safe) - be explicit about column selection - update messaging

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,8 @@ importFrom(qqman,manhattan)
 importFrom(qqman,qq)
 importFrom(regioneR,toGRanges)
 importFrom(rlang,.data)
+importFrom(rlang,format_error_bullets)
+importFrom(rlang,inform)
 importFrom(stats,binomial)
 importFrom(stats,cor)
 importFrom(stats,dnorm)
