--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,10 +46,10 @@ jobs:
           needs: check
       
       # Compile these macOS packages from source
-      - name: Reinstall Rsamtools from source (macOS only, via pak)
+      - name: Reinstall Rsamtools, etc from source (macOS only, via pak)
         if: runner.os == 'macOS'
         run: |
-          pak::pak("bioc::Rsamtools?source=true")
+          pak::pak(c("bioc::Rhtslib?source=true", "bioc::Rsamtools?source=true", "bioc::GenomicRanges?source=true")))
         shell: Rscript {0}
 
       # Install PLINK binary
