--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -49,7 +49,16 @@ jobs:
       - name: Reinstall Rsamtools, etc from source (macOS only, via pak)
         if: runner.os == 'macOS'
         run: |
-          pak::pak(c("bioc::Rhtslib?source=true", "bioc::Rsamtools?source=true", "bioc::GenomicRanges?source=true"))
+          pak::pak(c(
+            "bioc::Rhtslib?source=true",
+            "bioc::Rsamtools?source=true",
+            "bioc::GenomicRanges?source=true",
+            "bioc::IRanges?source=true",
+            "bioc::S4Vectors?source=true",
+            "bioc::XVector?source=true",
+            "bioc::zlibbioc?source=true",
+            "bioc::BiocGenerics?source=true"
+          ))
         shell: Rscript {0}
 
       # Install PLINK binary
