cat() be gone - improve messaging where cat() had previosuly been used - still log, via other methods - add refactor progress bar

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,7 @@ Imports:
     progress,
     rlang,
     foreach,
-    Rdpack
+    Rdpack,
+    cli
 RdMacros: Rdpack
 biocViews: GenomeWideAssociation, LinkageDisequilibrium, VariantDetection, QualityControl, PrincipalComponent
