--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,13 @@ importFrom(bigsnpr,snp_attach)
 importFrom(bigsnpr,snp_ldsc2)
 importFrom(bigsnpr,snp_match)
 importFrom(bigsnpr,snp_readBed)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
+importFrom(cli,cli_progress_update)
+importFrom(cli,pb_bar)
+importFrom(cli,pb_current)
+importFrom(cli,pb_percent)
+importFrom(cli,pb_total)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
