better OS detection via utility function - should detect variations, ie macos, mac, macosx, windows, windows10 - return os_type ("unix", "windows", "unknown" - rename existing utils file, as this defines more than just the pipe operator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(SexRegress)
 export(SumstatGenCorr)
 export(TestXGene)
 export(Xhwe)
+export(detect_os_type)
 export(executePlinkMAF)
 export(plinkVCF)
 importFrom(BiocStyle,html_document)
