refactor HDL.rg.parallel - cleanup redundant code - fix parallel process .export env - add missing NAMESPACE import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ importFrom(sumFREGAT,sumchi)
 importFrom(sys,exec_wait)
 importFrom(utils,download.file)
 importFrom(utils,read.table)
+importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,unzip)
