--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,11 @@ importFrom(grid,unit)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
+importFrom(parallel,clusterCall)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
 importFrom(plyranges,join_overlap_intersect)
 importFrom(poolr,bonferroni)
 importFrom(poolr,stouffer)
