document returns, even if NULL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,8 +141,10 @@ importFrom(qqman,manhattan)
 importFrom(qqman,qq)
 importFrom(regioneR,toGRanges)
 importFrom(rlang,.data)
+importFrom(rlang,abort)
 importFrom(rlang,format_error_bullets)
 importFrom(rlang,inform)
+importFrom(rlang,warn)
 importFrom(stats,binomial)
 importFrom(stats,cor)
 importFrom(stats,dnorm)
