--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,11 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-0842-8768"))
            )
 Description: This package performs various models of genome-wide and x-chromosome wide association analyses applying best practices of quality control over genetic data.
-License: file LICENSE
+License: GPL (>= 3)
+URL: https://github.com/boseb/GXwasR/
+BugReports: https://github.com/boseb/GXwasR/issues
 Encoding: UTF-8
-LazyData: true
-Depends: R (>= 4.1)
+Depends: R (>= 4.5.0)
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
