--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-0842-8768"))
            )
 Description: This package performs various models of genome-wide and x-chromosome wide association analyses applying best practices of quality control over genetic data.
-License: GPL (>= 3)
+License: GPL (>= 3) + file LICENSE
 URL: https://github.com/boseb/GXwasR/
 BugReports: https://github.com/boseb/GXwasR/issues
 Encoding: UTF-8
