refactor download_reference() to validate_reference_data() - ensures users have ENV var, pointing to reference data - slight adjustment to functions requiring usage of reference data - updated docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(ComputeGeneticPC)
 export(ComputeLD)
 export(ComputePRS)
 export(DiffZeroOne)
-export(Download_reference)
 export(DummyCovar)
 export(EstimateHerit)
 export(FilterAllele)
@@ -35,6 +34,7 @@ export(Xhwe)
 export(detect_os_type)
 export(executePlinkMAF)
 export(plinkVCF)
+export(validate_reference_data)
 importFrom(BiocStyle,html_document)
 importFrom(GenomeInfoDb,getChromInfoFromUCSC)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
