--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,54 +18,54 @@ VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
-    stats,
-    grDevices,
     biomaRt,
-    geneAttribution,
-    pROC,
-    grid,
-    ggplotify,
-    GenomicFeatures,
-    graphics,
-    knitr,
-    rmarkdown,
-    tools,
-    qpdf,
-    printr,
     doSNOW,
+    geneAttribution,
+    GenomicFeatures,
+    ggplotify,
+    graphics,
+    grid,
+    grDevices,
+    knitr,
+    pROC,
+    printr,
+    qpdf,
     RefManageR,
+    rmarkdown,
     sessioninfo,
-    testthat
+    stats,
+    testthat,
+    tools
 Imports:
-    utils,
-    ggpubr,
-    ggrepel,
     BiocStyle,
-    GenomeInfoDb,
-    GenomicRanges,
-    Matrix,
-    SNPRelate,
     bigparallelr,
     bigsnpr,
+    cli,
     data.table,
     dplyr,
+    foreach,
     gdsfmt,
     ggplot2,
+    ggpubr,
+    ggrepel,
+    GenomeInfoDb,
+    GenomicRanges,
     gridExtra,
+    magrittr,
+    Matrix,
+    parallel,
     plyranges,
+    poolr,
+    progress,
     qqman,
+    Rdpack,
     regioneR,
+    Rsamtools,
+    rlang,
+    SNPRelate,
     stringr,
     sumFREGAT,
     sys,
-    magrittr,
-    poolr,
-    progress,
-    rlang,
-    foreach,
-    Rdpack,
-    Rsamtools,
-    cli,
-    parallel
+    utils
 RdMacros: Rdpack
 biocViews: GenomeWideAssociation, LinkageDisequilibrium, VariantDetection, QualityControl, PrincipalComponent
