--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,7 @@ importFrom(stats,qnorm)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_sub)
 importFrom(sumFREGAT,ACAT)
 importFrom(sumFREGAT,BT)
