--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(cli,pb_bar)
 importFrom(cli,pb_current)
 importFrom(cli,pb_percent)
 importFrom(cli,pb_total)
+importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
@@ -179,3 +180,4 @@ importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
+importFrom(vroom,vroom)
