--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(BiocStyle,html_document)
 importFrom(GenomeInfoDb,getChromInfoFromUCSC)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(Matrix,sparseMatrix)
+importFrom(R.utils,bunzip2)
 importFrom(Rdpack,reprompt)
 importFrom(Rsamtools,bgzip)
 importFrom(Rsamtools,indexTabix)
