add vignettes - gwas_models - postimputationQC

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,9 @@ articles:
     navbar: ~
     contents:
       - GXwasR_overview
-      - decoding_ancestry
       - preimputationQC
+      - postimputationQC
+      - gwas_models
+      - GXwasR_PRS
+      - decoding_ancestry
       - meta_analysis
