revamp vignettes - label chunks - rafactor print calls, return plots directly - remove old figure pngs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,8 @@ importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,par)
 importFrom(graphics,points)
+importFrom(grid,grid.draw)
+importFrom(grid,grid.newpage)
 importFrom(grid,unit)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
