--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(data.table,rbindlist)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -168,6 +169,7 @@ importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_sub)
 importFrom(sumFREGAT,ACAT)
 importFrom(sumFREGAT,BT)
@@ -179,6 +181,7 @@ importFrom(sumFREGAT,minp)
 importFrom(sumFREGAT,simpleM)
 importFrom(sumFREGAT,sumchi)
 importFrom(sys,exec_wait)
+importFrom(tidyr,pivot_longer)
 importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
